--- a/README.rdoc
+++ b/README.rdoc
@@ -8,12 +8,14 @@ Current features:
 
 • /names/:id -> Density of state calculations displayed with D3 which you can selectively display the orbitals you want
 
-Desired features:
+• Added color picking for all orbital types
 
-• Dynamically select colors for each DOS plot
+• You can now see the atoms in the calculation itself using GLmol viewer
+
+Desired features:
 
 • Provide a method on the /names/ page to select particular calculations and corresponding orbitals. Each calculation would have a separate plot and the orbitals would all overlay in that plot. D3 would know how many calculations you wanted to display and confine all plots to the same 3.1"x3.1" area in the browser.
 
-• Convert atom numbers into the atom type ex: "64","43","24" -> S$_{3}$
+• Convert atom numbers into the atom type ex: "64","43","24" -> S$_{3}$ (In the coords database, if you search for a calculation ID and atom number it will return the atom type so this should be straightforward to add in the future)
 
 • New calculations page for specifying the calculation number, name, and desired orbital clustering which would get entered into the database, and then run the corresponding python script to populate all the data.
